--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
   "name": "theme-token",
   "version": "0.1.0",
+  "description": "Theme Token - An open standard for tokenizing ShadCN UI themes on blockchain",
+  "homepage": "https://themetoken.dev",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/b-open-io/theme-token.git"
+  },
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3033",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.25",
+    "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -21,6 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
