--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
+    "js-1sat-ord": "^0.1.88",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "react": "19.2.0",
