Add author attribution and marketplace commission
- Author: WildSatchmo (https://github.com/rohenaz)
- 2% marketplace commission on purchases to 15q8YQSqUa9uTh6gh4AVixxq29xkpBBP9z

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "theme-token",
   "version": "0.1.0",
   "description": "Theme Token - An open standard for tokenizing ShadCN UI themes on blockchain",
+  "author": "WildSatchmo (https://github.com/rohenaz)",
   "homepage": "https://themetoken.dev",
   "repository": {
     "type": "git",
