--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "cli": "bun run cli/index.ts"
+    "cli": "bun run cli/index.ts",
+    "generate-og": "bun run scripts/generate-og-images.ts"
   },
   "dependencies": {
+    "@fontsource/space-grotesk": "^5.2.10",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.8",
@@ -28,14 +30,17 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
+    "@resvg/resvg-js": "^2.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "culori": "^4.0.2",
     "framer-motion": "^12.23.25",
     "js-1sat-ord": "^0.1.88",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "satori": "^0.18.3",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
