--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
     "@resvg/resvg-js": "^2.6.2",
+    "better-color-tools": "^0.12.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "culori": "^4.0.2",
     "framer-motion": "^12.23.25",
     "js-1sat-ord": "^0.1.88",
     "lucide-react": "^0.555.0",
