--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
     "@resvg/resvg-js": "^2.6.2",
-    "@theme-token/sdk": "^0.0.1",
+    "@theme-token/sdk": "0.0.2",
     "better-color-tools": "^0.12.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
