--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "2.15.4",
     "satori": "^0.18.3",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13",
