--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fontsource/space-grotesk": "^5.2.10",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-select": "^2.2.6",
@@ -31,7 +32,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
     "@resvg/resvg-js": "^2.6.2",
-    "@theme-token/sdk": "^0.0.3",
+    "@theme-token/sdk": "0.0.6",
     "better-color-tools": "^0.12.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
