--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "generate-og": "bun run scripts/generate-og-images.ts"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.44",
     "@fontsource/space-grotesk": "^5.2.10",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -34,6 +35,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@resvg/resvg-js": "^2.6.2",
     "@theme-token/sdk": "0.0.6",
+    "ai": "^5.0.106",
     "better-color-tools": "^0.12.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
