--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "generate-og": "bun run scripts/generate-og-images.ts"
   },
   "dependencies": {
-    "@ai-sdk/google": "^2.0.44",
+    "@ai-sdk/react": "^3.0.0-beta.129",
     "@fontsource/space-grotesk": "^5.2.10",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slider": "^1.3.6",
@@ -33,21 +37,32 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@resvg/resvg-js": "^2.6.2",
     "@theme-token/sdk": "0.0.6",
+    "@xyflow/react": "^12.9.3",
     "ai": "^5.0.106",
     "better-color-tools": "^0.12.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.25",
     "js-1sat-ord": "^0.1.88",
     "lucide-react": "^0.555.0",
+    "motion": "^12.23.25",
+    "nanoid": "^5.1.6",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "2.15.4",
     "satori": "^0.18.3",
+    "shiki": "^3.18.0",
+    "streamdown": "^1.6.9",
     "tailwind-merge": "^3.4.0",
+    "tokenlens": "^1.3.1",
+    "use-stick-to-bottom": "^1.1.1",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
