--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "shiki": "^3.18.0",
     "streamdown": "^1.6.9",
     "tailwind-merge": "^3.4.0",
+    "tints.dev": "^1.0.5",
     "tokenlens": "^1.3.1",
     "use-stick-to-bottom": "^1.1.1",
     "zod": "^4.1.13",
