--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
@@ -55,6 +56,7 @@
     "nanoid": "^5.1.6",
     "next": "16.0.6",
     "react": "19.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "19.2.0",
     "recharts": "2.15.4",
     "satori": "^0.18.3",
