--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@resvg/resvg-js": "^2.6.2",
     "@theme-token/sdk": "0.0.6",
+    "@vercel/kv": "^3.0.0",
     "@xyflow/react": "^12.9.3",
     "ai": "^5.0.106",
     "better-color-tools": "^0.12.3",
