--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
     "motion": "^12.23.25",
     "nanoid": "^5.1.6",
     "next": "16.0.6",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "19.2.0",
     "recharts": "2.15.4",
     "satori": "^0.18.3",
     "shiki": "^3.18.0",
+    "sonner": "^2.0.7",
     "streamdown": "^1.6.9",
     "tailwind-merge": "^3.4.0",
     "tints.dev": "^1.0.5",
