--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "tailwind-merge": "^3.4.0",
     "tints.dev": "^1.0.5",
     "tokenlens": "^1.3.1",
+    "use-sound": "^5.0.0",
     "use-stick-to-bottom": "^1.1.1",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
