--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "nanoid": "^5.1.6",
     "next": "16.0.6",
     "next-themes": "^0.4.6",
+    "opentype.js": "^1.3.4",
     "react": "19.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "19.2.0",
@@ -77,10 +78,12 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/opentype.js": "^1.3.8",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
+    "playwright": "^1.57.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
