--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
@@ -72,6 +73,7 @@
     "tokenlens": "^1.3.1",
     "use-sound": "^5.0.0",
     "use-stick-to-bottom": "^1.1.1",
+    "wawoff2": "^2.0.1",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
