Redesign on-chain protocol section with side-by-side layout
- Compact tab strip for asset types (theme, font, tile, wallpaper, icon)
- Side-by-side grid: field specs (left) + JSON preview (right)
- Interactive hover highlighting between fields and JSON
- Fixed layout shift with spacer rows for consistent height
- Updated JSON examples with all fields and modern model names
- Font generation improvements and pattern studio updates

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@resvg/resvg-js": "^2.6.2",
     "@theme-token/sdk": "0.0.8",
+    "@vercel/functions": "^3.3.4",
     "@vercel/kv": "^3.0.0",
     "@xyflow/react": "^12.9.3",
     "ai": "^5.0.106",
@@ -69,6 +70,7 @@
     "shiki": "^3.18.0",
     "sonner": "^2.0.7",
     "streamdown": "^1.6.9",
+    "swr": "^2.3.7",
     "tailwind-merge": "^3.4.0",
     "tints.dev": "^1.0.5",
     "tokenlens": "^1.3.1",
