--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react": "19.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "19.2.0",
+    "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
     "satori": "^0.18.3",
     "shiki": "^3.18.0",
