--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "dependencies": {
     "@ai-sdk/react": "^3.0.0-beta.129",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@fontsource/space-grotesk": "^5.2.10",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -62,6 +65,7 @@
     "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "opentype.js": "^1.3.4",
+    "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "19.2.0",
