--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.25",
+    "geopattern": "^1.2.3",
+    "hero-patterns": "^2.1.0",
     "js-1sat-ord": "^0.1.88",
     "jszip": "^3.10.1",
     "lucide-react": "^0.555.0",
