--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@resvg/resvg-js": "^2.6.2",
     "@theme-token/sdk": "0.0.8",
+    "@types/three": "^0.181.0",
     "@vercel/functions": "^3.3.4",
     "@vercel/kv": "^3.0.0",
     "@xyflow/react": "^12.9.3",
@@ -61,7 +62,7 @@
     "hero-patterns": "^2.1.0",
     "js-1sat-ord": "^0.1.88",
     "jszip": "^3.10.1",
-    "lucide-react": "^0.555.0",
+    "lucide-react": "^0.556.0",
     "motion": "^12.23.25",
     "nanoid": "^5.1.6",
     "next": "^16.0.7",
@@ -79,6 +80,7 @@
     "streamdown": "^1.6.9",
     "swr": "^2.3.7",
     "tailwind-merge": "^3.4.0",
+    "three": "^0.181.2",
     "tints.dev": "^1.0.5",
     "tokenlens": "^1.3.1",
     "use-sound": "^5.0.0",
