--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@sigma-auth/better-auth-plugin": "0.0.19",
     "@tanstack/react-query": "^5.90.12",
     "@theme-token/sdk": "0.0.8",
+    "@types/sharp": "^0.32.0",
     "@types/three": "^0.181.0",
     "@vercel/functions": "^3.3.4",
     "@vercel/kv": "^3.0.0",
@@ -77,6 +78,7 @@
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
     "satori": "^0.18.3",
+    "sharp": "^0.34.5",
     "shiki": "^3.19.0",
     "sonner": "^2.0.7",
     "streamdown": "^1.6.10",
