feat: connect Swatchy AI chatbot to Vercel AI Gateway, fix theme cache bugs
Swatchy AI:
- Add /api/swatchy route using AI SDK v6 with Vercel AI Gateway
- Create agent config with Gemini 2.5 Flash for conversation
- Define tools for navigation, theme generation, studio control
- Add payment request UI for paid tools
- Wire useSwatchyChat to real AI endpoint

Theme Cache Fixes:
- Remove 1-hour expiry that dropped themes not on GorillaPool
- Preserve all cached themes during force refresh
- Increase cache TTL from 1 hour to 30 days
- Fix origin handling to accept full origin or txid

Preview Page:
- Add on-chain status indicator (On Chain/Pending Indexing/Inscribed)
- Show source of theme data with colored badge and tooltip

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "generate-og": "bun run scripts/generate-og-images.ts"
   },
   "dependencies": {
-    "@ai-sdk/react": "^2.0.109",
+    "@ai-sdk/google": "^3.0.0-beta.68",
+    "@ai-sdk/react": "^3.0.0-beta.141",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -54,7 +55,7 @@
     "@vercel/functions": "^3.3.4",
     "@vercel/kv": "^3.0.0",
     "@xyflow/react": "^12.10.0",
-    "ai": "^5.0.108",
+    "ai": "^6.0.0-beta.139",
     "better-color-tools": "^0.12.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
