--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@theme-token/sdk": "0.0.8",
     "@types/sharp": "^0.32.0",
     "@types/three": "^0.181.0",
+    "@vercel/blob": "^2.0.0",
     "@vercel/functions": "^3.3.4",
     "@vercel/kv": "^3.0.0",
     "@xyflow/react": "^12.10.0",
