--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@resvg/resvg-js": "^2.6.2",
     "@sigma-auth/better-auth-plugin": "0.0.19",
     "@tanstack/react-query": "^5.90.12",
-    "@theme-token/sdk": "0.0.8",
+    "@theme-token/sdk": "^0.0.10",
     "@types/sharp": "^0.32.0",
     "@types/three": "^0.181.0",
     "@vercel/blob": "^2.0.0",
@@ -96,6 +96,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.8",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20.19.26",
     "@types/opentype.js": "^1.3.8",
