--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "generate-og": "bun run scripts/generate-og-images.ts"
   },
   "dependencies": {
-    "@ai-sdk/google": "^3.0.0-beta.68",
-    "@ai-sdk/react": "^3.0.0-beta.141",
+    "@ai-sdk/google": "^2.0.46",
+    "@ai-sdk/react": "^2.0.114",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -47,39 +47,39 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@resvg/resvg-js": "^2.6.2",
-    "@sigma-auth/better-auth-plugin": "0.0.19",
+    "@sigma-auth/better-auth-plugin": "0.0.26",
     "@tanstack/react-query": "^5.90.12",
     "@theme-token/sdk": "^0.0.11",
     "@types/sharp": "^0.32.0",
-    "@types/three": "^0.181.0",
+    "@types/three": "^0.182.0",
     "@vercel/blob": "^2.0.0",
     "@vercel/functions": "^3.3.4",
     "@vercel/kv": "^3.0.0",
     "@vercel/sandbox": "^1.1.0",
     "@xyflow/react": "^12.10.0",
-    "ai": "^6.0.0-beta.139",
+    "ai": "^5.0.112",
     "better-color-tools": "^0.12.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^12.23.25",
+    "framer-motion": "^12.23.26",
     "geopattern": "^1.2.3",
     "hero-patterns": "^2.1.0",
     "js-1sat-ord": "0.1.90",
     "jszip": "^3.10.1",
-    "lucide-react": "^0.556.0",
-    "motion": "^12.23.25",
+    "lucide-react": "^0.560.0",
+    "motion": "^12.23.26",
     "nanoid": "^5.1.6",
-    "next": "^16.0.8",
+    "next": "^16.0.9",
     "next-themes": "^0.4.6",
     "opentype.js": "^1.3.4",
     "radix-ui": "^1.4.3",
-    "react": "19.2.0",
+    "react": "19.2.2",
     "react-colorful": "^5.6.1",
-    "react-dom": "19.2.0",
+    "react-dom": "19.2.2",
     "react-resizable-panels": "^3.0.6",
-    "recharts": "2.15.4",
+    "recharts": "3.5.1",
     "satori": "^0.18.3",
     "sharp": "^0.34.5",
     "shiki": "^3.19.0",
@@ -87,7 +87,7 @@
     "streamdown": "^1.6.10",
     "swr": "^2.3.7",
     "tailwind-merge": "^3.4.0",
-    "three": "^0.181.2",
+    "three": "^0.182.0",
     "tints.dev": "^1.0.5",
     "tokenlens": "^1.3.1",
     "use-sound": "^5.0.0",
@@ -98,15 +98,15 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^20.19.26",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^25.0.0",
     "@types/opentype.js": "^1.3.8",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.1",
-    "eslint-config-next": "16.0.6",
+    "eslint-config-next": "16.0.9",
     "playwright": "^1.57.0",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
