--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@resvg/resvg-js": "^2.6.2",
     "@sigma-auth/better-auth-plugin": "0.0.26",
     "@tanstack/react-query": "^5.90.12",
-    "@theme-token/sdk": "^0.0.11",
+    "@theme-token/sdk": "0.0.12",
     "@types/sharp": "^0.32.0",
     "@types/three": "^0.182.0",
     "@vercel/blob": "^2.0.0",
