--- a/package.json
+++ b/package.json
@@ -20,11 +20,20 @@
   "dependencies": {
     "@ai-sdk/google": "^2.0.46",
     "@ai-sdk/react": "^2.0.114",
+    "@base-ui/react": "^1.0.0",
     "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@faker-js/faker": "^10.1.0",
     "@fontsource/space-grotesk": "^5.2.10",
+    "@hookform/resolvers": "^5.2.2",
+    "@hugeicons/core-free-icons": "^2.0.0",
+    "@hugeicons/react": "^1.1.1",
+    "@radix-ui/react-accessible-icon": "^1.1.8",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -32,8 +41,12 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-portal": "^1.1.10",
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -43,12 +56,20 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@resvg/resvg-js": "^2.6.2",
     "@sigma-auth/better-auth-plugin": "0.0.26",
+    "@tabler/icons-react": "^3.35.0",
+    "@tanstack/react-form": "^1.27.3",
     "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.13",
     "@theme-token/sdk": "0.0.12",
     "@types/sharp": "^0.32.0",
     "@types/three": "^0.182.0",
@@ -59,28 +80,44 @@
     "@xyflow/react": "^12.10.0",
     "ai": "^5.0.112",
     "better-color-tools": "^0.12.3",
+    "change-case": "^5.4.4",
+    "chrono-node": "^2.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "dedent": "^1.7.0",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.26",
+    "front-matter": "^4.0.2",
     "geopattern": "^1.2.3",
     "hero-patterns": "^2.1.0",
+    "input-otp": "^1.4.2",
+    "jotai": "^2.16.0",
     "js-1sat-ord": "0.1.90",
     "jszip": "^3.10.1",
+    "little-date": "^1.2.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.560.0",
     "motion": "^12.23.26",
     "nanoid": "^5.1.6",
     "next": "^16.0.10",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.8.5",
     "opentype.js": "^1.3.4",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-colorful": "^5.6.1",
+    "react-day-picker": "^9.12.0",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
+    "react-textarea-autosize": "^8.5.9",
     "recharts": "2.15.4",
+    "rehype-pretty-code": "^0.14.1",
     "satori": "^0.18.3",
+    "server-only": "^0.0.1",
     "sharp": "^0.34.5",
     "shiki": "^3.19.0",
     "sonner": "^2.0.7",
@@ -92,6 +129,7 @@
     "tokenlens": "^1.3.1",
     "use-sound": "^5.0.0",
     "use-stick-to-bottom": "^1.1.1",
+    "vaul": "^1.1.2",
     "wawoff2": "^2.0.1",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
