--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "dedent": "^1.7.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "esbuild": "^0.27.1",
     "framer-motion": "^12.23.26",
     "front-matter": "^4.0.2",
     "geopattern": "^1.2.3",
